# makefile

./: CMakeLists.txt
src/: main.cpp
